--- a/ex08/fabio_mazza/Aula_8_Exercício_Template.ipynb
+++ b/ex08/fabio_mazza/Aula_8_Exercício_Template.ipynb
@@ -3820,10 +3820,10 @@
         "        \n",
         "        self.embedding_matrix = torch.nn.Embedding(vocab_size, embedding_dim, device=device)\n",
         "        self.positional = torch.zeros([context_size, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
-        "        self.wq = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
-        "        self.wk = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
-        "        self.wv = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
-        "        self.wo = torch.rand([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
+        "        self.wq = torch.zeros([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
+        "        self.wk = torch.zeros([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
+        "        self.wv = torch.zeros([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
+        "        self.wo = torch.zeros([embedding_dim, embedding_dim], dtype = torch.float32, requires_grad = True, device=device)\n",
         "\n",
         "\n",
         "        self.linear_1 = torch.nn.Linear(embedding_dim, n_linear_2, device=device)\n",
@@ -3843,7 +3843,7 @@
         "        print('X shape:', X.shape)\n",
         "        X = X + self.positional\n",
         "        print('X shape:', X.shape)\n",
-        "        Q = torch.matmul(X[:,-1, :], self.wq)\n",
+        "        Q = torch.matmul(X[:,-1, :], self.wq).unsqueeze(dim=1)\n",
         "        print('Q shape:', Q.shape)\n",
         "        K = torch.matmul(X, self.wk)\n",
         "        print('K shape:', K.shape)\n",
@@ -3858,14 +3858,14 @@
         "        E = torch.matmul(E, self.wo)\n",
         "        print('E shape:', E.shape)\n",
         "        out = self.linear_1(E)\n",
-        "        out = self.linear_out(out)\n",
+        "        out = self.linear_out(out).squeeze(dim=1)\n",
         "        print('out shape:', out.shape)\n",
         "        T = 4.0 #temperature\n",
         "        out = out/T\n",
         "\n",
         "        return out"
       ],
-      "execution_count": 47,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -3884,7 +3884,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c74d5808-d4a1-42ee-b87d-81ac762ae305"
+        "outputId": "403dbf24-f4cc-4ffe-9223-08d2a49759aa"
       },
       "source": [
         "model = LanguageModel(\n",
@@ -3897,7 +3897,7 @@
         "sample_train_gpu = sample_train.to(device)\n",
         "model(sample_train_gpu).shape"
       ],
-      "execution_count": 48,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -3906,25 +3906,25 @@
             "V:29794, L:9, D:64\n",
             "X shape: torch.Size([1, 9, 64])\n",
             "X shape: torch.Size([1, 9, 64])\n",
-            "Q shape: torch.Size([1, 64])\n",
+            "Q shape: torch.Size([1, 1, 64])\n",
             "K shape: torch.Size([1, 9, 64])\n",
             "V shape: torch.Size([1, 9, 64])\n",
             "Scores shape: torch.Size([1, 1, 9])\n",
             "probs shape: torch.Size([1, 1, 9])\n",
             "E shape: torch.Size([1, 1, 64])\n",
             "E shape: torch.Size([1, 1, 64])\n",
-            "out shape: torch.Size([1, 1, 29794])\n"
+            "out shape: torch.Size([1, 29794])\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "torch.Size([1, 1, 29794])"
+              "torch.Size([1, 29794])"
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 63
         }
       ]
     },
@@ -3935,13 +3935,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "89af2cf7-911f-4a63-d58d-e11b9b416aac"
+        "outputId": "6791271d-138c-4144-9117-37e263cc2ef0"
       },
       "source": [
         "num_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
         "print(f'Number of model parameters: {num_params}')"
       ],
-      "execution_count": 49,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -4004,12 +4004,11 @@
       "metadata": {
         "id": "gbMP8VAUncfX",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 571
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "16f25fb1-1909-4a3d-cfb3-ea7839a03210"
+        "outputId": "c29f02d0-1497-47ec-f279-cc2a8632327e"
       },
-      "execution_count": 50,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -4018,28 +4017,17 @@
             "V:29794, L:9, D:64\n",
             "X shape: torch.Size([1000, 9, 64])\n",
             "X shape: torch.Size([1000, 9, 64])\n",
-            "Q shape: torch.Size([1000, 64])\n",
+            "Q shape: torch.Size([1000, 1, 64])\n",
             "K shape: torch.Size([1000, 9, 64])\n",
             "V shape: torch.Size([1000, 9, 64])\n",
-            "Scores shape: torch.Size([1000, 1000, 9])\n",
-            "probs shape: torch.Size([1000, 1000, 9])\n",
-            "E shape: torch.Size([1000, 1000, 64])\n",
-            "E shape: torch.Size([1000, 1000, 64])\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-50-54399794f97b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0msample_train_gpu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msample_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mtarget_token_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtarget_token_ids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_train_gpu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0mmy_perplexity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mperplexity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtarget_token_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1108\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1109\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1110\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1111\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1112\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-47-da761da0d879>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m     60\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'E shape:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_out\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'out shape:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0mT\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4.0\u001b[0m \u001b[0;31m#temperature\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1108\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1109\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1110\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1111\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1112\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/linear.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbias\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mextra_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: CUDA out of memory. Tried to allocate 110.99 GiB (GPU 0; 15.90 GiB total capacity; 9.41 GiB already allocated; 5.10 GiB free; 9.77 GiB reserved in total by PyTorch) If reserved memory is >> allocated memory try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF"
+            "Scores shape: torch.Size([1000, 1, 9])\n",
+            "probs shape: torch.Size([1000, 1, 9])\n",
+            "E shape: torch.Size([1000, 1, 64])\n",
+            "E shape: torch.Size([1000, 1, 64])\n",
+            "out shape: torch.Size([1000, 29794])\n",
+            "my perplexity:              29817\n",
+            "correct initial perplexity: 29794\n",
+            "Passou o no assert da perplexidade\n"
           ]
         }
       ]
