--- a/ex09/fabio_mazza/Aula_9_Exercício_Template_teste.ipynb
+++ b/ex09/fabio_mazza/Aula_9_Exercício_Template_teste.ipynb
@@ -33,10 +33,10 @@
       ],
       "metadata": {
         "id": "jOdQB41_4ZxG",
-        "outputId": "30fdb83b-48f7-4564-ba23-1cfa6851b67d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "30fdb83b-48f7-4564-ba23-1cfa6851b67d"
       },
       "execution_count": 2,
       "outputs": [
@@ -227,6 +227,7 @@
         "        targets = []\n",
         "\n",
         "        for text in tqdm_notebook(texts):\n",
+        "          \n",
         "          token = tokenize(text, tokenizer, max_seq_length)\n",
         "          for i in range(len(token) - context_size):\n",
         "            inputs.append(token[i:i+context_size])\n",
@@ -298,31 +299,41 @@
         "\n",
         "tokenizer = BertTokenizer.from_pretrained(\"neuralmind/bert-base-portuguese-cased\")\n",
         "\n",
-        "dummy_texts = ['Eu gosto de correr até o lado esquerdo do lago', 'Ela gosta muito de comer pizza']\n",
+        "dummy_texts = ['Eu gosto de correr até o lado esquerdo do lago. \\n', 'Ela gosta muito de comer pizza']\n",
         "\n",
-        "ids = tokenizer(dummy_texts, max_length=9, return_tensors=None, add_special_tokens=True, padding = 'max_length').input_ids\n",
+        "#ids = tokenizer(dummy_texts, max_length=9, return_tensors=None, add_special_tokens=True, padding = 'max_length').input_ids\n",
+        "\n",
+        "ids = tokenizer(dummy_texts, max_length=9, return_tensors=None, special_tokens = ['PAD', 'CLS'], padding = 'max_length').input_ids\n",
         "\n",
         "ids\n"
       ],
       "metadata": {
-        "id": "5VNiioNbVNMq",
-        "outputId": "b1b1eb44-4377-4fcc-9c6d-ea57c412d62b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5VNiioNbVNMq",
+        "outputId": "750ce531-287f-4bda-97a5-8a27e681a84e"
       },
-      "execution_count": 23,
+      "execution_count": 33,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Keyword arguments {'special_tokens': ['PAD', 'CLS']} not recognized.\n",
+            "Keyword arguments {'special_tokens': ['PAD', 'CLS']} not recognized.\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[101, 3396, 10303, 125, 13239, 548, 146, 1341, 9657, 171, 6313, 102],\n",
+              "[[101, 3396, 10303, 125, 13239, 548, 146, 1341, 9657, 171, 6313, 119, 102],\n",
               " [101, 1660, 5971, 785, 125, 1847, 13779, 15616, 102]]"
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 33
         }
       ]
     },
@@ -354,24 +365,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vGlN1WqrXPA6",
-        "outputId": "52ede16d-92c5-45f4-ba73-b19b7d2c6751"
+        "outputId": "6f81e3ee-96f9-4da3-b203-9b45a2b00d4f"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-05-24 15:28:16--  https://storage.googleapis.com/unicamp-dl/ia025a_2022s1/aula9/sample-1gb.txt\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.68.128, 74.125.24.128, 142.251.10.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.68.128|:443... connected.\n",
+            "--2022-06-02 17:38:22--  https://storage.googleapis.com/unicamp-dl/ia025a_2022s1/aula9/sample-1gb.txt\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.210.128, 173.194.213.128, 173.194.214.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.210.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1230909256 (1.1G) [text/plain]\n",
             "Saving to: ‘sample-1gb.txt’\n",
             "\n",
-            "sample-1gb.txt      100%[===================>]   1.15G   110MB/s    in 11s     \n",
+            "sample-1gb.txt      100%[===================>]   1.15G   180MB/s    in 6.6s    \n",
             "\n",
-            "2022-05-24 15:28:29 (102 MB/s) - ‘sample-1gb.txt’ saved [1230909256/1230909256]\n",
+            "2022-06-02 17:38:29 (178 MB/s) - ‘sample-1gb.txt’ saved [1230909256/1230909256]\n",
             "\n"
           ]
         }
@@ -404,10 +415,65 @@
         "test_dataset = MyDataset(texts=test_texts, tokenizer=tokenizer, max_seq_length=max_seq_length)"
       ],
       "metadata": {
-        "id": "gxa_4gmiA-wE"
+        "id": "gxa_4gmiA-wE",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        },
+        "outputId": "c79c3db7-601e-40fa-cc4f-37a24978dac5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Read 250000 lines.\n",
+            "Truncating to 700 lines.\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-28-6e73baebd49e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mtest_texts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtexts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mtest_examples\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mtraining_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMyDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtraining_texts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_seq_length\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmax_seq_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0mvalid_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMyDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalid_texts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_seq_length\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmax_seq_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mtest_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMyDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest_texts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_seq_length\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmax_seq_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'MyDataset' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "texts[1]"
+      ],
+      "metadata": {
+        "id": "o2uUPmj5gEaJ",
+        "outputId": "a8669775-819e-4466-ecf9-42c60e281df3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"Comissão de Construção da Nova Sede GOB. A Comissão de Construção da Nova Sede do Grande Oriente do Brasil - Minas Gerais disponibiliza esta área para que os IIr.'. Maçons, devidamente regularizados, possam acompanhar todo o processo de construção da nova sede do GOB-MG; inclusive esclarecendo possíveis dúvidas que possam existir. Acesse a página da SMI - Sociedade Maçônica de Investimentos S/A e vejam todo conteúdo.\\n\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "code",
